[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Tiles/tile_0004.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Animations/EnemyTakeDamage.tres" type="Animation" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.105932, 1 )
colors = PoolColorArray( 1, 1, 1, 0.054902, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 0.3, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3, 2 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( -1, -4, 1, -4, 4, -1, 4, 2, 2, 4, -2, 4, -4, 2, -4, -1 )

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.05 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 5
script = ExtResource( 2 )

[node name="DashParticles" type="Particles2D" parent="."]
position = Vector2( 0, -4 )
emitting = false
amount = 50
lifetime = 0.2
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="StepParticles" type="Node2D" parent="."]
position = Vector2( 0, -3 )

[node name="Left" type="Particles2D" parent="StepParticles"]
position = Vector2( -1, 3 )
local_coords = false
process_material = SubResource( 6 )

[node name="Right" type="Particles2D" parent="StepParticles"]
position = Vector2( 1, 3 )
local_coords = false
process_material = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="MoveShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 7 )

[node name="DamageDetector" type="Area2D" parent="."]
position = Vector2( 0, -4 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="ColorAnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnemyTakeDamage = ExtResource( 3 )
[connection signal="body_entered" from="DamageDetector" to="." method="_on_DamageDetector_body_entered"]
